# SPD-Gr6

./: .gitignore  README.md
Heap/: CMakeLists.txt  main.cpp
Heap/Inc/: Heap.hpp
Heap/Src/: CMakeLists.txt  Heap.cpp
Heap_use/: CMakeLists.txt  TODO.md  main.cpp
Heap_use/Heap/: CMakeLists.txt
Help/: text_to_string.cpp
Test/: test
Zadanie 1/: CMakeLists.txt  TODO.md  main.cpp  temp.cpp  text.txt
Zadanie 1/Heap/: CMakeLists.txt
Zadanie 1/Input/: 10_tasks.txt  11_tasks.txt  20_zad.txt  50_zad.txt  7_tasks.txt  SCHRAGE2.txt  Schrage_sep.txt  carlierSet.txt  pierwszy.txt  schrage.txt  test_schrageSep.txt  text.txt
Zadanie 1/Node/: CMakeLists.txt
Zadanie 1/Problem/: CMakeLists.txt
Zadanie 1/Solution/: CMakeLists.txt
Zadanie 1/Task/: CMakeLists.txt
Zadanie 1/release/: CMakeCache.txt  Makefile  Scheduling  cmake_install.cmake
Zadanie 2/: CMakeLists.txt  TODO.md  main.cpp
Zadanie 2/Input/: 10_tasks.txt  20_zad.txt  26tasks.txt  2tasks.txt  3tasks.txt  4tasks.txt  50_zad.txt  50tasks.txt  5_tasks.txt  5tasks.txt  5tasks[10-20].txt  6_tasks.txt  7tasks.txt  7tasks[10-20].txt  9tasks.txt  9tasks[10-20].txt
Zadanie 2/Problem/: CMakeLists.txt
Zadanie 2/Solution/: CMakeLists.txt
Zadanie 3/: CMakeLists.txt  main.cpp
Zadanie 3/Input/: 4_1293.txt  SPR_10t_2m_574c.txt  SPR_20t_2m.txt  SPR_5t_2m303c.txt  SPR_8t_2m_461c.txt  temp.txt
Zadanie 4/: CMakeLists.txt  main.cpp
Zadanie 4/Input/: 6_6.txt  SPR_10t_5m_770c.txt  SPR_20t_5m_1359c.txt  SPR_5t_5m_576c.txt  SPR_8t_5m_678c.txt  easytest.txt
Zadanie 4/Problem/: CMakeLists.txt
(+50 files in other folders)
